# azure-devops-test-manager

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v1.0.0.md  patch.sh  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/azure_devops_test_manager/: __init__.py  _version.py  cli.py  core.py  old_version.py  py.typed
tests/: __init__.py  test_cli.py  test_core.py
