[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-devops-test-manager"
description = "A comprehensive tool for managing Azure DevOps test points with XML integration and fuzzy matching"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Azure DevOps Test Manager Team", email = "junaid.iqbal74@gmail.com"},
]
maintainers = [
    {name = "Azure DevOps Test Manager Team", email = "junaid.iqbal74@gmail.com"},
]
keywords = ["azure-devops", "testing", "test-management", "automation", "xml", "junit", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.12.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/azure-devops-test-manager"
Documentation = "https://azure-devops-test-manager.readthedocs.io/"
Repository = "https://github.com/yourusername/azure-devops-test-manager.git"
Issues = "https://github.com/yourusername/azure-devops-test-manager/issues"
Changelog = "https://github.com/yourusername/azure-devops-test-manager/blob/main/CHANGELOG.md"

[project.scripts]
azure-devops-test-manager = "azure_devops_test_manager.cli:main"
ado-test-manager = "azure_devops_test_manager.cli:main"

[tool.setuptools_scm]
write_to = "src/azure_devops_test_manager/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
azure_devops_test_manager = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=azure_devops_test_manager",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "fuzzywuzzy.*",
    "beautifulsoup4.*",
    "bs4.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]